--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,18 +1,14 @@
 [build]
-  # Directory to deploy
-  publish = "dist"
-  # Command to build the project
-  command = "npm run build"
+  publish = "client/dist"
+  command = "npm run build --prefix client"
 
 [[redirects]]
-  # Redirect all API requests to the backend server
   from = "/api/*"
   to = "https://shortify-5rrs.onrender.com/:splat"
   status = 200
   force = true
 
 [[redirects]]
-  # Redirect all other requests to the index.html for SPA routing
   from = "/*"
   to = "/index.html"
   status = 200
