--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,6 +1,7 @@
 [build]
+  base = "client"
+  command = "npm run build"
   publish = "client/dist"
-  command = "npm run build --prefix client"
 
 [[redirects]]
   from = "/api/*"
